--- a/book.css
+++ b/book.css
@@ -58,14 +58,11 @@ section {
     page-break-after: always;
 }
 
+/*Remove until hanging-punctuation is supported by Weasyprint
 section, article {
     text-align: justify;
 }
-
-a {
-    color: inherit;
-    text-decoration: none;
-}
+*/
 
 .frontmatter {
     page: frontmatterpage;
@@ -83,7 +80,6 @@ a {
     display: block;
     max-height: 190mm;
     max-width: 100mm;
-    font-size: 0.8em;
     justify-content: center;
 }
 
