Add font that supports small-caps

--- a/book.css
+++ b/book.css
@@ -39,6 +39,22 @@
     } 
 }
 
+@font-face {
+    font-family: 'EB Garamond';
+    font-weight: normal;
+    src: url("https://www.1001fonts.com/download/font/eb-garamond.12-regular.otf");
+}
+
+@font-face {
+    font-family: 'EB Garamond';
+    font-variant: small-caps;
+    src: url("https://www.1001fonts.com/download/font/eb-garamond.smallcaps-12-regular.otf");
+}
+
+html {
+    font-family: 'EB Garamond';
+}
+
 .fullpage { 
     page: full; 
 }
